
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Fix a second refresh of the grid when opening a combo box [#15123]
- New lexicon for edit content type [#15094]
- Fix resource drag & drop  setting `is_folder` to mark parent as container [#15076]
- Add numberfield as Field Type option for system settings [#15093]
- Remember filter properties for system setting grid from browser url [#15086]
- Prevent rewrite of .well-known directory used by LetsEncrypt [#15033]
- Allow custom values in Listbox (Multi-Select) TV [#14957]
- Fix DSN creation during an update with an existing port [#15083]
- Clear phpThumb connector properties [#15068]
- Date TV improvements [#15000]
- Improve navigation styles in element tree [#14989]
- Prevent overwriting apache_request_headers() in modRestServiceRequest [#15060]
- Fix checkbox toggling for custom context paths in setup [#15008]
- Remove references to safe_mode and related lexicons [#15058]
- Fix nested output filters [#14458]
- Add JSON Grid xtype [#14959]
- Fix `allowedFileTypes` being ignored in the Media Browser [#15046]
- Remove "allowBlank: false" for symlink/weblink in quick update [#14981]
- Improve styles for login [#15018]
- Add missing AddToGroup events in Security/Group/User/Create processor [#15022]
- Use single-quotes in MySQL queries for modTransportPackage for ANSI_QUOTES compatibility [#15011]
- Add context key to reload URL when switching templates [#14998]
- Fix package dependency restrictions not working [#14904]
- Fix fatal error when updating a git alpha1 install without running composer update [#14996]
- Fix positioning of reset-to-default button on TVs [#14686]
- Change style for uninstalled packages in the package manager [#14686]
- Improve modal styling with more padding around buttons [#14978]
- Fix resource drag & drop ordering [#14987]
