@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Prevent path traversal when sending registry message [#15134]
 - Fix a second refresh of the grid when opening a combo box [#15123]
 - New lexicon for edit content type [#15094]
 - Fix resource drag & drop  setting `is_folder` to mark parent as container [#15076]
